@@ -1,7 +1,11 @@
 CONSOLE MESSAGE: line 7: Script evaluated
 Tests the Timeline API instrumentation of a network resource load
 
-Script resource loaded
+Start
+step0
+step1
+step2
+step3
 
 ResourceSendRequest Properties:
 {
@@ -45,4 +49,4 @@ ResourceFinish Properties:
     usedHeapSize : <number>
     totalHeapSize : <number>
 }
-
+Script resource loaded
